@@ -1,3 +1,6 @@
+ 20091017 (T.S)
+ * amdeth.c: removed CPP redefines.
+
  20090827 (T.S)
  * amdeth.h, amdeth.c:
    o Added support for the 79970 device (emulated by qemu) and
